<resources>
    <string name="app_name">Calculator</string>
    <string name="round_bracket_left">(</string>
    <string name="round_bracket_right">)</string>
    <string name="_reset">C</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="_division">/</string>
    <string name="_multiplication">*</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="_minus">-</string>
    <string name="number_zero">0</string>
    <string name="triple_zero">000</string>
    <string name="_dot">.</string>
    <string name="_percent">%</string>
    <string name="_plus">+</string>
    <string name="delete_button">Del</string>
    <string name="_settings">...</string>
    <string name="_history">His</string>
    <string name="_equal">=</string>
    <string name="green_theme">Green theme</string>
    <string name="dark_theme">Dark Theme</string>
</resources>